<resources>
    <string name="app_name">Hw12</string>
    <string name="editTextFullname">Full Name</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextRetypePassword">Re-type Password</string>
    <string name="genderTextview">Gender</string>
    <string name="radioBtnMale">Male</string>
    <string name="radioBtnFemale">Female</string>
    <string name="btnRegister">Register</string>
    <string name="btnShowInfo">Show Info</string>
    <string name="tvGender">Gender</string>
    <string name="btnSave">Save</string>
    <string name="editTextPhoneNumber">Phone number</string>
</resources>