<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
 android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/editTextRetypePassword"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editTextRetypePassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/editTextPhoneNumber"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editTextPhoneNumber"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextRetypePassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextUsername"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editTextUsername"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonFullName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPersonFullName"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/editTextFullname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/editTextEmail"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="289dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/genderTextview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/editTextRetypePassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioBtnFemale" />

        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/radioBtnMale" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:minHeight="48dp"
        android:text="@string/btnRegister"
        android:textColor="@color/white"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextRetypePassword"
        app:layout_constraintStart_toStartOf="@+id/editTextRetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:targetApi="m" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:shapeAppearanceOverlay="@style/RoundedImage"

        />
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    app:layout_constraintStart_toEndOf="@id/profile_photo"
    app:layout_constraintBottom_toBottomOf="@id/profile_photo"
    android:src="@android:drawable/ic_menu_gallery"
    android:layout_height="wrap_content"
    android:id="@+id/gelleryChooserFab"
    />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/profile_photo"
        app:layout_constraintBottom_toBottomOf="@id/profile_photo"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_height="wrap_content"
        android:id="@+id/cameraChooserFab"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
