<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/titleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Profile"
        app:layout_constraintHorizontal_bias="0.1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toTopOf="@id/guideline12" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:layout_marginTop="8dp"
        android:scaleType="center"
        android:src="@drawable/ic_outline_face_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/titleProfile"
        app:shapeAppearanceOverlay="@style/RoundedImage" />

    <LinearLayout
        android:id="@+id/infoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="179dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:id="@+id/top_linear"
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFullname"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/editTextFullname"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFullnameResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/editTextFullname"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvPhone"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Phone"
                    android:textAlignment="gravity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhoneResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Phone"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvUsername"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/editTextUsername"
                    android:textAlignment="gravity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUsernameResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/editTextUsername"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/editTextEmail"
                    android:textAlignment="gravity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUEmailResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/editTextEmail"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvPassword"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/editTextPassword"
                    android:textAlignment="gravity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPasswordResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/editTextPassword"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:backgroundTint="@color/white_cr">

            <LinearLayout
                android:layout_width="289dp"
                android:layout_height="match_parent"
                android:background="@drawable/linear_data_info"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/profile_item_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tvGender"
                    android:textAlignment="gravity"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvGenderResult"
                    style="@style/profile_item_style_result"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tvGender"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/infoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="infoList"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="13dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="18dp"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="373dp"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>